Complete nav bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
     <link rel="shortcut icon" href="assets/Favicon.png" type="image/x-icon">
 </head>
 <body>
+    <header>
+        <nav class="page-contain Inter">
+            <img src="assets/logo.png" alt="header logo">
+            <div class="nav-items">
+                <a class="nav-hide " href="">Home</a>
+                <a class="nav-hide " href=""><span class="nav-span">Shop</span></a>
+                <a class="nav-hide" href=""><span class="nav-span">About us</span></a>
+                <a href=""><i class="fa-solid fa-cart-shopping"></i><span class="nav-cart"> Card ($56)</span></a>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
