--- a/index.html
+++ b/index.html
@@ -15,15 +15,39 @@
 </head>
 <body>
     <header>
-        <nav class="page-contain Inter">
-            <img src="assets/logo.png" alt="header logo">
-            <div class="nav-items">
-                <a class="nav-hide " href="">Home</a>
-                <a class="nav-hide " href=""><span class="nav-span">Shop</span></a>
-                <a class="nav-hide" href=""><span class="nav-span">About us</span></a>
-                <a href=""><i class="fa-solid fa-cart-shopping"></i><span class="nav-cart"> Card ($56)</span></a>
+        <section>
+            <nav class="page-contain Inter">
+                <img src="assets/logo.png" alt="header logo">
+                <div class="nav-items">
+                    <a class="nav-hide " href="">Home</a>
+                    <a class="nav-hide " href=""><span class="nav-span">Shop</span></a>
+                    <a class="nav-hide" href=""><span class="nav-span">About us</span></a>
+                    <a href=""><i class="fa-solid fa-cart-shopping"></i><span class="nav-cart"> Card ($56)</span></a>
+                </div>
+            </nav>
+        </section>
+
+        <!-- Header Banner -->
+        <section class="page-contain banner">
+            <div class="fresh-flower">
+               <h2 class="head-title1 Noto-serif">ALWAYS <span class="color-head-title1">FRESH<br>FLOWERS</span></h2>
+               <p class="paragraph Inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
-        </nav>
+   
+            <div class="banner-flower">
+               <figure>
+                   <img src="assets/hero-flower.png" alt="Banner image">
+               </figure>
+            </div>
+        </section>
+
+        <!-- Our plants -->
+         <section class="page-contain">
+            <div class="plants-container">
+            <h2 class="common-title Noto-serif"><span>Our</span> Plants</h2>
+            <p class="paragraph Inter paragraph-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+         </section>
     </header>
     
 </body>
