--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section>
-            <nav class="page-contain Inter">
+            <nav class="page-container Inter">
                 <img src="assets/logo.png" alt="header logo">
                 <div class="nav-items">
                     <a class="nav-hide " href="">Home</a>
@@ -28,27 +28,142 @@
         </section>
 
         <!-- Header Banner -->
-        <section class="page-contain banner">
+        <section class="page-container banner">
             <div class="fresh-flower">
                <h2 class="head-title1 Noto-serif">ALWAYS <span class="color-head-title1">FRESH<br>FLOWERS</span></h2>
-               <p class="paragraph Inter">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+               <p class="paragraph Inter">We offer always fresh flowers,  handpicked daily to ensure the highest quality and beauty.
+Each bouquet is thoughtfully arranged to highlight the natural colors and charm of every bloom.
+Perfect for home décor, special occasions, or gifting.
+Bring freshness and elegance into your life with every jar. </p>
             </div>
    
-            <div class="banner-flower">
+            <div>
                <figure>
-                   <img src="assets/hero-flower.png" alt="Banner image">
+                   <img class="banner-flower" src="assets/hero-flower.png" alt="Banner image">
                </figure>
             </div>
         </section>
-
-        <!-- Our plants -->
-         <section class="page-contain">
+    </header>
+    <main>
+         <!-- Our plants -->
+         <section class="page-container">
             <div class="plants-container">
             <h2 class="common-title Noto-serif"><span>Our</span> Plants</h2>
-            <p class="paragraph Inter paragraph-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            <p class="paragraph Inter paragraph-text">Our vibrant floral collection features handpicked, seasonal blooms arranged in elegant glass jars. Each bouquet brings a burst of color and freshness to your space—perfect for gifting or brightening up your home. </p>
             </div>
          </section>
-    </header>
-    
+
+         <!-- flower-jar-card -->
+          <section class="page-container Inter">
+               <div class="jar-container">
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar6.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Lily Blossom</h3>
+                        <p class="price">20 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar7.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Lavender Bliss</h3>
+                        <p class="price">26 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar2 .jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Peony Bloom</h3>
+                        <p class="price button-down">17 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn ">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar3.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Sunflower Glow</h3>
+                        <p class="price">33 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar4.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Orchid Elegance</h3>
+                        <p class="price">19 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar5.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Daisy Dream</h3>
+                        <p class="price">31 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar6.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Tulip Delight</h3>
+                        <p class="price">80 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+
+                   <div class="card">
+                      <figure class="image-box">
+                        <img class="image-contain" src="assets/jar7.jpg" alt="">
+                      </figure>
+                      <div class="flower-name">
+                        <h3>Rose Charm</h3>
+                        <p class="price">100 USD</p>
+                      </div>
+                      <div>
+                        <button class="card-btn">ADD TO CART</button>
+                      </div>
+                   </div>
+               </div>
+          </section>
+
+          <!-- Flower and Plants Lover -->
+           
+    </main>
 </body>
 </html>
