add body and footer

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         <section class="page-container banner">
             <div class="fresh-flower">
                <h2 class="head-title1 Noto-serif">ALWAYS <span class="color-head-title1">FRESH<br>FLOWERS</span></h2>
-               <p class="paragraph Inter">We offer always fresh flowers,  handpicked daily to ensure the highest quality and beauty.
-Each bouquet is thoughtfully arranged to highlight the natural colors and charm of every bloom.
-Perfect for home décor, special occasions, or gifting.
-Bring freshness and elegance into your life with every jar. </p>
+               <p class="paragraph Inter">We offer always fresh flowers,  handpicked daily to ensure the highest quality and beauty.Each bouquet is thoughtfully arranged to highlight the natural colors and charm of every bloom.Perfect for home décor, special occasions, or gifting.Bring freshness and elegance into your life with every jar. </p>
             </div>
    
             <div>
@@ -163,7 +160,83 @@ Bring freshness and elegance into your life with every jar. </p>
           </section>
 
           <!-- Flower and Plants Lover -->
-           
+
+
+
+          
+          <!-- Latest Deals -->
+          <section class="page-container">
+            <div class="plants-container">
+            <h2 class="common-title Noto-serif"><span>Latest</span> Deals</h2>
+            <p class="paragraph Inter paragraph-text">Latest Deal: Buy 2 flower jars, get 1 FREE! Always fresh, beautifully arranged blooms delivered to your door.Limited time offer—don’t miss out!</p>
+            </div>
+          </section>
+
+          <!-- Latest Deals offer cards -->
+           <section class="page-container">
+              <div class="offer-cards">
+                  <div class="box1">
+                     <h4 class="Noto-serif box13-off">60% Off | Bloom Plant</h4>
+                     <a class="ancore Inter" href="#">Shop Now</a>
+                  </div>
+
+                  <div class="box2">
+                     <h4 class="Noto-serif box2-off">25% Off | Zabo Plant</h4>
+                     <a class="ancore Inter" href="#">Shop Now</a>
+                  </div>
+
+                  <div class="box3">
+                     <h4 class="Noto-serif box13-off">60% Off | Ana Plant</h4>
+                     <a class="ancore Inter" href="#">Shop Now</a>
+                  </div>
+              </div>
+           </section>
+
+           <!-- Join the colorful branch -->
+           <section class="colorful-branch">
+               <div class="join-branch">
+                   <h2 class="common-title Noto-serif branch-title">Join the colorful Branch</h2>
+                   <div class="search-subscribe">
+                     <input type="email" placeholder="Write email"/>
+                     <button>Subscribe</button> 
+                   </div>
+               </div>
+           </section>
     </main>
+  
+    <footer class="Inter">
+     <div class="footer-section">
+          <div class="div-1">
+            <img src="assets/logo.png" alt="logo">
+            <p class="footer-para">© 2025 FlowerMart. All rights reserved.Bringing you fresh, handpicked flowers to brighten every moment.Crafted with care, delivered with love.</p>
+          </div>
+          <div class="footer-items">
+              <div class="item-1">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Blog</a>
+                <a href="#">FAQ</a>
+                <a href="#">Contact US</a>
+              </div>
+              <div class="item-2">
+                <a href="#">Features</a>
+                <a href="#">Pricing</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Trems of Sercice</a>
+                <a href="#">Help Center</a>
+              </div>
+          </div>
+
+          <div class="logo-tools">
+            <div class="align-logo">
+              <a href="#"><img src="assets/icon-linkedin.png" alt="linkdin"></a>
+              <a href="#"><img src="assets/icon-facebook.png" alt="facebook"></a>
+              <a href="#"><img src="assets/icon-twitter.png" alt="twiter"></a>
+              <a href="#"><img src="assets/icon-youtube.png" alt="youtube"></a>
+            </div>
+          </div>
+      </div>
+    </footer>
+
 </body>
 </html>
