--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes I told you Don't Copy</title>
+    <title>Flower Jar</title>
     <!-- font awsome cdn -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google font family -->
@@ -55,7 +55,7 @@
                <div class="jar-container">
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar6.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Lily Blossom</h3>
@@ -68,7 +68,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar7.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Lavender Bliss</h3>
@@ -81,7 +81,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar2 .jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Peony Bloom</h3>
@@ -94,7 +94,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar3.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Sunflower Glow</h3>
@@ -107,7 +107,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar4.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Orchid Elegance</h3>
@@ -120,7 +120,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar5.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Daisy Dream</h3>
@@ -133,7 +133,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar6.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Tulip Delight</h3>
@@ -146,7 +146,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar7.jpg" alt="">
+                        <img class="image-contain" src="assets/jar1.png" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Rose Charm</h3>
@@ -160,10 +160,33 @@
           </section>
 
           <!-- Flower and Plants Lover -->
+          <section class="page-container plants">
+           <div class="ture-seller-container">
+              <div class="trust-seller">
+                <img src="assets/flower-store.png" alt="flower-store">
+                <div class="trusted-sale trust-hide">
+                  <img src="assets/trusted-badge.png" alt="trust logo">
+                </div>
+              </div>
+              <div>
+                <h2 class="Noto-serif plants-title">Flower & Plants Lover</h2>
+                <div class="plants-lover-description Inter">
+                  <ul>
+                    <li>
+                      <p>Flowers and plants bring a unique sense of peace, beauty, and life into our surroundings. For flower and plant lovers, each bloom is more than just decoration—it’s a symbol of nature’s artistry.</p>
+                    </li>
+                    <li>
+                      <p>Caring for plants and flowers is a soothing hobby that connects people to the rhythms of nature. From watering routines to watching a seed bloom, plant lovers find joy in the little things.</p>
+                    </li>
+                    <li>
+                      <p>For many, surrounding themselves with greenery is a way to express creativity and boost well-being. Whether it’s decorating a home with floral arrangements or tending to a balcony garden, plants are a source of inspiration.</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
 
-
-
-          
           <!-- Latest Deals -->
           <section class="page-container">
             <div class="plants-container">
