animation not done

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                <div class="jar-container">
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar1.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Lily Blossom</h3>
-                        <p class="price">20 USD</p>
+                        <p class="price">90 USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
@@ -68,7 +68,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar2.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Lavender Bliss</h3>
@@ -81,7 +81,7 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar3.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Peony Bloom</h3>
@@ -94,11 +94,11 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar4.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Sunflower Glow</h3>
-                        <p class="price">33 USD</p>
+                        <p class="price">133 USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
@@ -107,11 +107,11 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar5.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Orchid Elegance</h3>
-                        <p class="price">19 USD</p>
+                        <p class="price">105USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
@@ -120,11 +120,11 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar9.jpg" alt="">
                       </figure>
                       <div class="flower-name">
                         <h3>Daisy Dream</h3>
-                        <p class="price">31 USD</p>
+                        <p class="price">130 USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
@@ -133,11 +133,11 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar6.jpg" alt="">
                       </figure>
                       <div class="flower-name">
-                        <h3>Tulip Delight</h3>
-                        <p class="price">80 USD</p>
+                        <h3>Sun Delight</h3>
+                        <p class="price">180 USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
@@ -146,11 +146,11 @@
 
                    <div class="card">
                       <figure class="image-box">
-                        <img class="image-contain" src="assets/jar1.png" alt="">
+                        <img class="image-contain" src="assets/card-jar8.jpg" alt="">
                       </figure>
                       <div class="flower-name">
-                        <h3>Rose Charm</h3>
-                        <p class="price">100 USD</p>
+                        <h3>Red Rose Charm</h3>
+                        <p class="price">86 USD</p>
                       </div>
                       <div>
                         <button class="card-btn">ADD TO CART</button>
